[gd_scene load_steps=9 format=3 uid="uid://dkc1g7a3smpj8"]

[ext_resource type="Script" uid="uid://dtrhcugp10b6" path="res://scripts/game/Game.gd" id="1_tnufd"]
[ext_resource type="Script" uid="uid://bt0wagaxqsk1y" path="res://scripts/ui/ProductionUI.gd" id="2_wgkvs"]
[ext_resource type="Script" uid="uid://dxbykm6curnqp" path="res://scripts/ui/ShopUI.gd" id="3_x8kkw"]
[ext_resource type="Script" uid="uid://cr0a370uehj2d" path="res://scripts/ui/TopBar.gd" id="5_qxgaf"]
[ext_resource type="Script" uid="uid://b6lfdl52r3228" path="res://scripts/ui/LoadingScreen.gd" id="6_rsdpc"]
[ext_resource type="PackedScene" uid="uid://rimw3l2hs7n0" path="res://scenes/ui/TimeControls.tscn" id="7_u3xnr"]
[ext_resource type="PackedScene" uid="uid://csvqevak0ned0" path="res://scenes/ui/RadioPlayer.tscn" id="8_rn7ph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuwmc"]
bg_color = Color(0.164706, 0.156863, 0.054902, 1)

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tnufd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="LoadingScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_rsdpc")

[node name="ColorRect" type="ColorRect" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.121569, 0.101961, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -70.0
offset_right = 250.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LoadingScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Загрузка..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen/VBoxContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
value = 50.0

[node name="MainUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer" type="VSplitContainer" parent="MainUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
collapsed = true
dragger_visibility = 1

[node name="TopBar" type="Panel" parent="MainUI/VSplitContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yuwmc")
script = ExtResource("5_qxgaf")

[node name="Background" type="TextureRect" parent="MainUI/VSplitContainer/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/VSplitContainer/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MoneyContainer" type="HBoxContainer" parent="MainUI/VSplitContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="MoneyIcon" type="TextureRect" parent="MainUI/VSplitContainer/TopBar/HBoxContainer/MoneyContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="MoneyLabel" type="Label" parent="MainUI/VSplitContainer/TopBar/HBoxContainer/MoneyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "500₽"
vertical_alignment = 1

[node name="ReputationContainer" type="HBoxContainer" parent="MainUI/VSplitContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="ReputationIcon" type="TextureRect" parent="MainUI/VSplitContainer/TopBar/HBoxContainer/ReputationContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="ReputationLabel" type="Label" parent="MainUI/VSplitContainer/TopBar/HBoxContainer/ReputationContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "50"
vertical_alignment = 1

[node name="DayContainer" type="HBoxContainer" parent="MainUI/VSplitContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="CalendarIcon" type="TextureRect" parent="MainUI/VSplitContainer/TopBar/HBoxContainer/DayContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="DayLabel" type="Label" parent="MainUI/VSplitContainer/TopBar/HBoxContainer/DayContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "День 1"
vertical_alignment = 1

[node name="TimeControls" parent="MainUI/VSplitContainer/TopBar" instance=ExtResource("7_u3xnr")]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="RadioPlayer" parent="MainUI/VSplitContainer/TopBar" instance=ExtResource("8_rn7ph")]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -20.0
offset_right = 120.0
offset_bottom = 20.0
grow_vertical = 2

[node name="ContentContainer" type="HSplitContainer" parent="MainUI/VSplitContainer"]
layout_mode = 2
collapsed = true
dragger_visibility = 1

[node name="ShopUI" type="Control" parent="MainUI/VSplitContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_x8kkw")

[node name="Background" type="ColorRect" parent="MainUI/VSplitContainer/ContentContainer/ShopUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.635294, 0.490196, 0.25098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/VSplitContainer/ContentContainer/ShopUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitlePanel" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Магазин"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopArea" type="MarginContainer" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer/ShopArea"]
layout_mode = 2

[node name="CounterPanel" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer/ShopArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CustomerArea" type="Control" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer/ShopArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="StoragePanel" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer/ShopArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StorageTitle" type="Label" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer/ShopArea/VBoxContainer/StoragePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Склад"
horizontal_alignment = 1

[node name="StorageGrid" type="GridContainer" parent="MainUI/VSplitContainer/ContentContainer/ShopUI/VBoxContainer/ShopArea/VBoxContainer/StoragePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="ProductionUI" type="Control" parent="MainUI/VSplitContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_wgkvs")

[node name="Background" type="ColorRect" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.321569, 0.258824, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitlePanel" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Производство"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProductionModePanel" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionModePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SamogonButton" type="Button" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionModePanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
toggle_mode = true
button_pressed = true
text = "Самогон"

[node name="BeerButton" type="Button" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionModePanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "Пиво"

[node name="WineButton" type="Button" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionModePanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "Вино"

[node name="ProductionArea" type="MarginContainer" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionArea"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="IngredientsPanel" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/IngredientsPanel"]
layout_mode = 0
offset_right = 103.0
offset_bottom = 26.0
text = "Ингредиенты"

[node name="IngredientsBar" type="HBoxContainer" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/IngredientsPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
grow_horizontal = 2
grow_vertical = 0

[node name="ToolsPanel" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ToolsPanel"]
layout_mode = 0
offset_right = 103.0
offset_bottom = 26.0
text = "Инструменты"

[node name="ToolsBar" type="HBoxContainer" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ToolsPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonPanel" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RecipeBookButton" type="Button" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ButtonPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Книга рецептов"

[node name="UpgradeButton" type="Button" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ButtonPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Улучшения"

[node name="PopupContainer" type="Control" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/PopupContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="CardPopup" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/PopupContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="RecipeBook" type="Panel" parent="MainUI/VSplitContainer/ContentContainer/ProductionUI/PopupContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionModePanel/HBoxContainer/SamogonButton" to="." method="_on_production_mode_changed" binds= ["samogon"]]
[connection signal="pressed" from="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionModePanel/HBoxContainer/BeerButton" to="." method="_on_production_mode_changed" binds= ["beer"]]
[connection signal="pressed" from="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ProductionModePanel/HBoxContainer/WineButton" to="." method="_on_production_mode_changed" binds= ["wine"]]
[connection signal="pressed" from="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ButtonPanel/HBoxContainer/RecipeBookButton" to="MainUI/VSplitContainer/ContentContainer/ProductionUI" method="_on_recipe_book_button_pressed"]
[connection signal="pressed" from="MainUI/VSplitContainer/ContentContainer/ProductionUI/VBoxContainer/ButtonPanel/HBoxContainer/UpgradeButton" to="MainUI/VSplitContainer/ContentContainer/ProductionUI" method="_on_upgrade_button_pressed"]
